--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
   },
   "homepage": "https://github.com/Ke1992/wxapp-pack#readme",
   "devDependencies": {
+    "@types/cheerio": "^0.22.13",
+    "@types/cli-progress": "^1.8.1",
     "@types/fs-extra": "^8.0.1",
     "@types/inquirer": "^6.5.0",
     "@types/lodash": "^4.14.144",
@@ -40,9 +42,12 @@
   },
   "dependencies": {
     "chalk": "^2.4.2",
+    "cheerio": "^1.0.0-rc.3",
+    "cli-progress": "^3.3.1",
     "commander": "^3.0.2",
     "fs-extra": "^8.1.0",
     "inquirer": "^7.0.0",
-    "lodash": "^4.17.15"
+    "lodash": "^4.17.15",
+    "precinct": "^6.1.2"
   }
 }
