--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "homepage": "https://github.com/Ke1992/wxapp-pack#readme",
   "devDependencies": {
+    "@types/babel__generator": "^7.6.0",
     "@types/cheerio": "^0.22.13",
     "@types/cli-progress": "^1.8.1",
     "@types/fs-extra": "^8.0.1",
@@ -41,6 +42,8 @@
     "typescript": "^3.6.4"
   },
   "dependencies": {
+    "@babel/generator": "^7.7.2",
+    "@babel/parser": "^7.7.3",
     "chalk": "^2.4.2",
     "cheerio": "^1.0.0-rc.3",
     "cli-progress": "^3.3.1",
