--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "cheerio": "^1.0.0-rc.3",
     "cli-progress": "^3.3.1",
     "commander": "^3.0.2",
+    "decomment": "^0.9.2",
     "fs-extra": "^8.1.0",
     "inquirer": "^7.0.0",
     "lodash": "^4.17.15",
