--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   "homepage": "https://github.com/Ke1992/wxapp-pack#readme",
   "devDependencies": {
     "@types/babel__generator": "^7.6.0",
-    "@types/cheerio": "^0.22.13",
+    "@types/babel__traverse": "^7.0.7",
     "@types/cli-progress": "^1.8.1",
     "@types/fs-extra": "^8.0.1",
     "@types/inquirer": "^6.5.0",
@@ -44,16 +44,17 @@
   "dependencies": {
     "@babel/generator": "^7.7.2",
     "@babel/parser": "^7.7.3",
+    "@babel/traverse": "^7.7.2",
+    "@babel/types": "^7.7.2",
     "chalk": "^2.4.2",
-    "cheerio": "^1.0.0-rc.3",
     "cli-progress": "^3.3.1",
     "commander": "^3.0.2",
     "decomment": "^0.9.2",
     "fs-extra": "^8.1.0",
+    "htmlparser2": "^4.0.0",
     "inquirer": "^7.0.0",
     "lodash": "^4.17.15",
     "postcss": "^7.0.21",
-    "precinct": "^6.1.2",
     "terser": "^4.4.0"
   }
 }
