--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "@types/inquirer": "^6.5.0",
     "@types/lodash": "^4.14.144",
     "@types/node": "^12.11.7",
+    "@types/parse5": "^5.0.2",
+    "@types/parse5-htmlparser2-tree-adapter": "^5.0.1",
     "@typescript-eslint/eslint-plugin": "^2.5.0",
     "@typescript-eslint/parser": "^2.5.0",
     "eslint": "^6.5.1",
@@ -50,10 +52,13 @@
     "cli-progress": "^3.3.1",
     "commander": "^3.0.2",
     "decomment": "^0.9.2",
+    "domhandler": "^3.0.0",
     "fs-extra": "^8.1.0",
     "htmlparser2": "^4.0.0",
     "inquirer": "^7.0.0",
     "lodash": "^4.17.15",
+    "parse5": "^5.1.1",
+    "parse5-htmlparser2-tree-adapter": "^5.1.1",
     "postcss": "^7.0.21",
     "terser": "^4.4.0"
   }
