--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
   ],
   "author": "Ke1992",
   "license": "MIT",
+  "engines": {
+    "node": ">= 8.3.0"
+  },
   "bugs": {
     "url": "https://github.com/Ke1992/wxapp-pack/issues"
   },
